# wasm-typescript-definition

./: Cargo.toml  README.md
serde_schema_derive/: Cargo.toml
serde_schema_derive/src/: derive_enum.rs  derive_struct.rs  lib.rs
serde_schema_derive/tests/: derive.rs  typescript.rs
src/: derive_enum.rs  derive_struct.rs  lib.rs
tests/: typescript.rs
