[package]
name = "wasm-typescript-definition"
version = "0.1.0"
description = "serde support for exporting Typescript definitions using wasm-bindgen"
readme = "README.md"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tcr/wasm-typescript-definition"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn =   "1.0"
proc-macro2 = "1.0"
serde_derive_internals = "0.25"

[dev-dependencies]
serde_derive = "1"
